--- a/Interdisciplinar/Views/Alunos/Details.cshtml
+++ b/Interdisciplinar/Views/Alunos/Details.cshtml
@@ -63,6 +63,7 @@
     @Html.ActionLink("Alterar", "Edit", new { id = Model.AlunoId }, new { @class = "btn	btn-primary" })
     @Html.ActionLink("Retornar	para	a	listagem", "Index", null, new { @class = "btn	btn-success" })
 
+@Html.Partial("~/Views/Ideias/_PorAluno.cshtml", Model.Ideias.ToList())
     @section ScriptPage	{
         <script type="text/javascript">
             $(document).ready(function () {
