--- a/Interdisciplinar/Views/Cursos/Details.cshtml
+++ b/Interdisciplinar/Views/Cursos/Details.cshtml
@@ -41,6 +41,8 @@
 @Html.ActionLink("Alterar", "Edit", new { id = Model.CursoId }, new { @class = "btn	btn-primary" })
 @Html.ActionLink("Retornar	para a	listagem", "Index", null, new { @class = "btn btn-success" })
 
+@Html.Partial("~/Views/Alunos/_PorCurso.cshtml", Model.Alunos.ToList())
+
 @section ScriptPage	{
     <script type="text/javascript">
         $(document).ready(function () {
