--- a/Interdisciplinar/Views/Alunos/Details.cshtml
+++ b/Interdisciplinar/Views/Alunos/Details.cshtml
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.Curso.Nome)
+        @Html.LabelFor(model => model.Curso)
         <div class="input-group">
             <span class="input-group-addon">
                 <i class="glyphicon glyphicon-education"></i>
